--- a/2.md
+++ b/2.md
@@ -1,5 +1,5 @@
 ##FCC
-* see [Federal Communications Commission](#Federal Communications Commission)
+* see [Federal Communications Commission](#federal-communications-commission)
 
 a
 b
