--- a/2.md
+++ b/2.md
@@ -1,4 +1,4 @@
-## FCC
+# FCC
 * see [Federal Communications Commission](#federal-communications-emmission)
 
 a
@@ -76,7 +76,7 @@ c
 
 jy
 
-## Federal Communications Commission
+# Federal Communications Commission
 er
 fr
 g
