--- a/2.md
+++ b/2.md
@@ -1,106 +1,6 @@
 # FCC
-* see [Federal Communications Commission](#federal-communications-commission)
-
-a
-b
-
-c
-
-d
-
-e
-
-f
-
-g
-
-h
-
-u
-
-1
-
-i
-
-j
-
-k
-
-l
-
-m
-
-n
-a
-
-a
-a
-a
-s
-d
-
-g
-g
-h
-
-t
-r
-
-e
-
-e
-
-e
-
-e
-
-e
-
-y
-
-u
-
-i
-
-o
-
-f
-
-f
-
-w
-
-z
-
-c
-
-jy
+* acronym for [Federal Communications Commission](#federal-communications-commission)
 
 # Federal Communications Commission
-er
-fr
-g
+* US Regulating body for digital communications systems
 
-
-gt
-rtg
-rtg
-
-
-t
-
-t
-
-t
-
-t
-
-t
-
-t
-
-t
-
-t
-
-t
