--- a/2.md
+++ b/2.md
@@ -3,4 +3,76 @@
 
 # Federal Communications Commission
 * US Regulating body for digital communications systems
+# Windows
+  * Desktop Operating System created by Microsoft
 
+# macOS
+  * Desktop Operating System created by Apple, exclusive to [Mac Devices](#Mac)
+
+# MS-DOS
+  * nm
+    ## etymology
+
+      * shortening of the words `Microsoft Disk Operating System`
+      * Microsoft -> MS
+      * Disk Operating System -> DOS
+
+# DOS
+  <small> see [Denial of Service attack, shortened DoS</small>
+
+# Unix
+  
+  * `adj`:  an Operating System derived from AT&T Unix
+    * "Unix based"
+  * `noun`: An Operating System developed by AT&T intended for use within phone systems, later licensed to outsiders to become the [Unix Family of Operating Systems](#:~:text=A+family+of+operating+Systems)
+    * "The Unix Operating System"
+# Linux
+  * `adj` A familiy of Operating Systems based on the Linux Kernel
+    * "Linux-based"
+  * `noun` a open source base for an Operating System developed by Linus Torvalds to replicate Unix
+    *  * "The Linux Kernel" 
+    * NOT based on Unix
+    ## etymology
+      t
+
+GNU/Linux
+  * `noun` software that runs over of the Linux Kernel to allow for it's usage
+
+BSD
+  * `noun` a Unix based Operating System developed by Berkeley
+
+SuSE
+
+FreeBSD
+
+OpenSuSE
+
+XNU
+
+Darwin
+
+iOS
+
+Android
+
+Ubuntu
+
+Debian
+
+Elementary OS
+
+Pop! OS
+
+Zorin OS
+
+RedHat Enterprise Linux
+  < RHEL
+  < Redhat Linux
+
+Fedora
+Linux Mint
+Alpine Linux
+Arch Linux
+Kali Linux
+Solaris
+Steam OS
