--- a/2.md
+++ b/2.md
@@ -1,78 +1,123 @@
+# Term <sup><sup><sub><sub><small><sup>`type` </sup></small></sub></sub></sup></sup> 
+
 # FCC
 * acronym for [Federal Communications Commission](#federal-communications-commission)
 
 # Federal Communications Commission
 * US Regulating body for digital communications systems
-# Windows
-  * Desktop Operating System created by Microsoft
 
-# macOS
-  * Desktop Operating System created by Apple, exclusive to [Mac Devices](#Mac)
+# Windows <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+  * Desktop Operating System created by Microsoft. Successor to MS-DOS
 
-# MS-DOS
-  * nm
+# macOS <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+  * Desktop Operating System created by Apple, exclusive to [Mac Devices](#mac)
+
+# Mac <sup><sub><sup><small>`Consumer Device`</small></sup></sub></sup>
+
+# MS-DOS <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+  * predecessor to [Windows](#windows-operating-system)
     ## etymology
 
       * shortening of the words `Microsoft Disk Operating System`
-      * Microsoft -> MS
-      * Disk Operating System -> DOS
+        * Microsoft -> MS
+        * Disk Operating System -> DOS
 
-# DOS
-  <small> see [Denial of Service attack, shortened DoS</small>
+# DOS 
+  * acronym for [Disk Operating System](#disk-operating-system). possibly confused with [MS-DOS](#ms-dos-operating-system), an early operating system by Microsoft, branded as a Disk Operating System
 
-# Unix
-  
+# DoS
+  * acronym for the [Denial of Service](#denial-of-service-networking-attack) attack
+
+# denial of service <sup><sub><sup><small>`Networking Attack`</small></sup></sub></sup>
+  * an attack on a computer occurring when too much incoming traffic is recieved, causing resources to be allocated to the malicious traffic and unable to respond to regular traffic
+# ping of death <sup><sub><sup><small>`Networking Attack`</small></sup></sub></sup>
+  * 
+# RCE 
+  * acronym for [Remote Code Execution](#remote-code-execution)
+# remote code execution
+  * interchangable: [arbitrary code execution](#arbitrary-code-execution)
+  * The execution of commands, code, binary, or other means of accessing sensitive priviliges on a computer, via another
+# Unix <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
   * `adj`:  an Operating System derived from AT&T Unix
     * "Unix based"
+    * "Unix-like"
   * `noun`: An Operating System developed by AT&T intended for use within phone systems, later licensed to outsiders to become the [Unix Family of Operating Systems](#:~:text=A+family+of+operating+Systems)
     * "The Unix Operating System"
-# Linux
+
+# Linux<sup><sub><sup><small>`Kernel`</small></sup></sub></sup>
   * `adj` A familiy of Operating Systems based on the Linux Kernel
     * "Linux-based"
   * `noun` a open source base for an Operating System developed by Linus Torvalds to replicate Unix
     *  * "The Linux Kernel" 
-    * NOT based on Unix
+    * NOT based on Unix. Made to imitate Unix
     ## etymology
-      t
 
-GNU/Linux
+# GNU/Linux <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
   * `noun` software that runs over of the Linux Kernel to allow for it's usage
 
-BSD
-  * `noun` a Unix based Operating System developed by Berkeley
+# BSD <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+  * `noun` a Unix based Operating System developed at Berkeley
+  * `adj` an operating system based on BSD
 
-SuSE
+# SuSE <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
-FreeBSD
+# FreeBSD <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
-OpenSuSE
+# OpenSuSE <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
-XNU
+# XNU <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
-Darwin
+# Darwin <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+  
+# iOS <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
-iOS
+# Android <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+  * an open source operating system for mobile devices, developed at [Google](#Google-company)
 
-Android
+# android
+  * a device running the [Android](#android-operating-system) operating system
 
-Ubuntu
+# android
+  * less common synonym for [robot](#robot)
 
-Debian
+# Ubuntu <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+  * operating system
+# Debian <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
-Elementary OS
+# Elementary OS<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
-Pop! OS
+# Pop! OS<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
-Zorin OS
+# Zorin OS<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+# Red Hat <sup><sub><sup><small>`Company`</small></sup></sub></sup>
 
-RedHat Enterprise Linux
-  < RHEL
-  < Redhat Linux
+# Red Hat Enterprise Linux  <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+  <small><small><ul>
+  <li> aka "Red Hat Linux" or "Redhat" </li>
+  <li> aka "RHEL" or "RH" </li>
+    <ul><li><b>R</b>ed <b>H</b>at <b>E</b>nterprise <b>L</b>inux</li></ul>
+  </ul></small></small>
+  
+    
+  * Linux Distribution maintained for enterprise computers
 
-Fedora
-Linux Mint
-Alpine Linux
-Arch Linux
-Kali Linux
-Solaris
-Steam OS
+# Fedora <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+  *  `noun` an Operating system based on Red Hat
+
+# Linux Mint<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+
+
+# Alpine Linux<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+
+
+# Arch Linux<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+
+
+# Kali Linux<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+
+
+# Solaris<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+
+
+# Steam OS<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+  
