--- a/2.md
+++ b/2.md
@@ -1,9 +1,9 @@
 # Term <sup><sup><sub><sub><small><sup>`type` </sup></small></sub></sub></sup></sup> 
 
 # FCC
-* acronym for [Federal Communications Commission](#federal-communications-commission)
+* acronym for [Federal Communications Commission](#federal-communications-commission-regulations)
 
-# Federal Communications Commission
+# Federal Communications Commission <sup><sub><sup><small>`regulations`</small></sup></sub></sup>
 * US Regulating body for digital communications systems
 
 # Windows <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
@@ -32,9 +32,9 @@
   * an attack on a computer occurring when too much incoming traffic is recieved, causing resources to be allocated to the malicious traffic and unable to respond to regular traffic
 # ping of death <sup><sub><sup><small>`Networking Attack`</small></sup></sub></sup>
   * 
-# RCE 
-  * acronym for [Remote Code Execution](#remote-code-execution)
-# remote code execution
+# RCE <sup><sub><sup><small>`Cybersecurity`</small></sup></sub></sup>
+  * acronym for [Remote Code Execution](#remote-code-execution-cybersecurity)
+# remote code execution <sup><sub><sup><small>`Cybersecurity`</small></sup></sub></sup>
   * interchangable: [arbitrary code execution](#arbitrary-code-execution)
   * The execution of commands, code, binary, or other means of accessing sensitive priviliges on a computer, via another
 # Unix <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
@@ -76,6 +76,7 @@
 
 # android
   * a device running the [Android](#android-operating-system) operating system
+  * a mobile device that *can* run the [Android](#android-operating-system) operating system
 
 # android
   * less common synonym for [robot](#robot)
