--- a/2.md
+++ b/2.md
@@ -6,6 +6,32 @@
 # Federal Communications Commission <sup><sub><sup><small>`regulations`</small></sup></sub></sup>
 * US Regulating body for digital communications systems
 
+# International Organization for Standardization
+
+# International Electrotechnical Commission
+
+# Internet Engineering Task Force
+
+# Institute of Electrical and Electronics Engineers
+
+# Internet Governance Forum
+
+# Regional Internet Registry
+
+# Number Resource Organization
+  * 
+
+# Africa Network Information Centre
+  * abbreviated "AFRINIC"
+
+
+# Internet Society 
+  * abbreviated "ISOC"
+
+# Internet Corporation for Assigned Names and Numbers
+
+# Internet Assigned Numbers Authority
+
 # Windows <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
   * Desktop Operating System created by Microsoft. Successor to MS-DOS
 
@@ -13,6 +39,7 @@
   * Desktop Operating System created by Apple, exclusive to [Mac Devices](#mac)
 
 # Mac <sup><sub><sup><small>`Consumer Device`</small></sup></sub></sup>
+  computer made by Apple
 
 # MS-DOS <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
   * predecessor to [Windows](#windows-operating-system)
@@ -114,11 +141,77 @@
 # Arch Linux<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
 
-# Kali Linux<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+# Kali Linux <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
 
-# Solaris<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+# Solaris <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
 
-# Steam OS<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+# Steam OS <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
   
+# Kloxia
+
+# Vivante
+
+
+
+# Purism <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+
+# Sun Microsystems
+
+# Oracle
+
+# Microsoft
+
+# Linux Foundation
+
+# Free Software Foundation
+
+# NXP
+
+# SK hynix
+
+# Cirrus Logic
+
+# STMicroelectronics
+
+# Vishay
+
+# Phillips
+
+# LG
+
+# Sega
+
+# Nintendo
+
+# Neo Geo
+
+# Atari
+
+# Commodore
+
+# Tandy
+
+# SoundBlaster
+  * sound card by Creative Technology
+
+# Creative Technology
+
+# QSound
+  
+# Seer Systems
+
+# Ensoniq
+
+# Radioshack
+
+# Google
+
+# Samsung
+
+# Apple
+
+# Motorola
+
+# Lenovo
