--- a/2.md
+++ b/2.md
@@ -31,7 +31,8 @@
 # Internet Corporation for Assigned Names and Numbers
 
 # Internet Assigned Numbers Authority
-
+  * acronymized, "IANA"
+  * 
 # Windows <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
   * Desktop Operating System created by Microsoft. Successor to MS-DOS
 
@@ -112,9 +113,9 @@
   * operating system
 # Debian <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
-# Elementary OS<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+# Elementary OS <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
-# Pop! OS<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+# Pop! OS <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 
 # Zorin OS<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 # Red Hat <sup><sub><sup><small>`Company`</small></sup></sub></sup>
@@ -215,3 +216,108 @@
 # Motorola
 
 # Lenovo
+
+# Tandy
+
+# Color Graphics Adapter
+
+# EGA
+
+# CircleCI
+
+# Ubiquiti
+
+# 9to5Mac
+
+# IGN
+
+# ArsTechnica
+
+# 9to5Google
+
+# Android Authority
+
+# Android Police
+
+# The Verge
+  * e
+
+# MacRumors
+
+# CNET
+
+# Forbes
+
+# PhoneArena
+
+# Apple Insider
+
+# Ming Chi Kuo
+  * 
+
+Ice Universe
+
+Mi UI
+
+Hello UI
+
+One UI
+
+TouchWiz
+
+# Universal Windows Program
+  * A Portable Executable, specific to Windows &geq; 8
+# Portable Executable
+  * An executable format for the windows operating system
+# Executable and Linkable Format
+  * shortened, "ELF"
+# git
+  
+# GitHub
+
+Gitpod.io
+
+BitBucket
+
+GitLab
+
+Sourceforge
+
+PasteBin
+
+forgejo
+
+Heroku
+
+Netify
+Vercel
+firebase
+
+Replit
+
+glitch.me
+
+stackblitz
+Google Scholar
+
+
+A#
+
+# Cortex `processing`
+  * 
+
+# Aarch64
+  * see Arm, sense 2
+# arm64
+
+# armhf
+
+# Arm
+  * a company that exists solely to collect royalties for using its Arm architecture, sense 2
+  * an [reduced instruction set computing](reduced-instruction-set-computer) architecture 
+# HDMI
+  * 
+# Digital Markets Act
+  * aka "DMA"
+# Digital Autonomy with RISC-V in Europe
+  aka "DARE"
