--- a/2.md
+++ b/2.md
@@ -5,6 +5,7 @@
 
 # Federal Communications Commission <sup><sub><sup><small>`regulations`</small></sup></sub></sup>
 * US Regulating body for digital communications systems
+# Federal Trade Commission
 
 # International Organization for Standardization
 
@@ -122,8 +123,8 @@
 
 # Red Hat Enterprise Linux  <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
   <small><small><ul>
-  <li> aka "Red Hat Linux" or "Redhat" </li>
-  <li> aka "RHEL" or "RH" </li>
+  <li> aka "Red Hat Linux", or "Red Hat" </li>
+  <li> aka "RHEL", or "RH" from "Red Hat" </li>
     <ul><li><b>R</b>ed <b>H</b>at <b>E</b>nterprise <b>L</b>inux</li></ul>
   </ul></small></small>
   
@@ -150,19 +151,24 @@
 
 # Steam OS <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
   
-# Kloxia
+# Kloxia 
 
 # Vivante
 
+# EndeavourOS
+
+# ArcoLinux Plasma
 
 
-# Purism <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+# Purism <sup><sub><sup>`Operating System`</small></sup></sub></sup>
 
 # Sun Microsystems
 
 # Oracle
 
 # Microsoft
+
+# Sony
 
 # Linux Foundation
 
@@ -217,6 +223,31 @@
 
 # Lenovo
 
+# ASUS
+# ASUS ROG
+# ASUS ROG Ally
+# Valve Steam Deck
+# MSI Claw
+# Lenovo Legion
+# Lenovo Legion Go
+
+# Retroid
+# Odin
+# Miyoo
+# Anbernic
+
+# Orange PI
+# Banana Pi
+# Thunderberry
+# Raspberry PI
+# Arduino
+# Arduino IDE
+
+# RetroArch
+# Libretro
+# Lemuroid
+# Launchbox
+
 # Tandy
 
 # Color Graphics Adapter
@@ -240,7 +271,6 @@
 # Android Police
 
 # The Verge
-  * e
 
 # MacRumors
 
@@ -250,20 +280,30 @@
 
 # PhoneArena
 
+# Reuters
+
+# XDA
+
+# Toms Hardware
+
+# Toms Guide
+
 # Apple Insider
 
 # Ming Chi Kuo
   * 
+# Ice Universe
 
-Ice Universe
+# Mi UI
 
-Mi UI
+# Hello UI
 
-Hello UI
+# TouchWiz
 
-One UI
+# Samsung Experience
 
-TouchWiz
+# One UI
+
 
 # Universal Windows Program
   * A Portable Executable, specific to Windows &geq; 8
@@ -309,15 +349,231 @@ A#
 # Aarch64
   * see Arm, sense 2
 # arm64
+  * aka "Arm 64 bit
 
 # armhf
 
 # Arm
-  * a company that exists solely to collect royalties for using its Arm architecture, sense 2
+  * a company that exists solely to collect royalties for using its proprietary Arm architecture, sense 2
   * an [reduced instruction set computing](reduced-instruction-set-computer) architecture 
 # HDMI
-  * 
+  * a company that exists solely to collect royalties for using it's proprietary HDMI connector and protocol
+  * A proprietary port / cable end for serving video information
+
 # Digital Markets Act
-  * aka "DMA"
+  * aka "DMA" 
 # Digital Autonomy with RISC-V in Europe
-  aka "DARE"
+  * aka "DARE"
+# PowerPC <sup><sub><sup>`Instruction Set Architecture`</sup></sub></sup>
+
+# AMD64
+# x86
+  * an architecture originating from the Intel 8086 microprocessor.
+  * if given an option between x86 and x64 in Windows, x86 is synonymous to "32 bit x86"
+# i386
+  * synonymous to IA-86, or 32 bit x86
+# SPARC
+  abbreviation for
+
+opportunity
+library
+february
+
+
+
+
+
+
+
+
+# Digital Millenium Copyright Act
+  * aka "DMCA"
+  * 
+# DMCA &sect;1201
+  * Commonly argued section of Copyright law used against emulation softwares, defining that DRM may not be circumvented.
+  * It States, under (a)(1)(A)
+    * <i>“No person shall circumvent a technological measure that effectively controls access to a work protected under this title.”</i>
+  * Used to prevent 3rd party repairs
+  * Used to restrict software compatibility
+
+# Nintendo
+  * Company known for creating widespread game consoles, marketed mainly at kids and families.
+  * Company known for obliterating and suing <small><small><small>TF OUT OF</small></small></small> developers of software that emulates it's consoles
+
+# Yuzu
+# Suyu
+# Ryujinx
+# Citron
+# Pine
+# NxEmu
+# Nyushu
+# Sudachi
+# Skyline
+# Pine
+# Live4k
+# Uzuy
+# EggNS
+# NxEmu
+  * an emulator that aims to be legally invincible from Nintendo's lawyers.
+
+# MelonDS
+# Citra
+# Lime3DS
+# Panda3DS
+# Azahar
+
+# Dolphin
+
+# Cemu
+
+# RPCS3
+
+# PCSX2
+
+# XWine1
+# WinDurango
+
+# ShadPS4
+
+# Wine
+# Darling
+  * etymology
+    * Darwin (underlying MacOS)
+    
+# port <sup><sub><sup>`compatibility`</sup></sub></sup>
+  * `verb`: to refactor code to work on another platform, architecture, or environment.
+    * <i><big><big>&ldquo;</big></big> I plan to port my application to Android soon <big><big><big><big><sub><sub>&rdquo;</sub></sub></big></big></big></big></i>
+  
+# port <sup><sub><sup>`networking`</sup></sub></sup>
+  * `noun`: A physical connector slot, typically female
+  ------
+  * `noun`: An available virtual communication channel between computers
+    * phrase: "Open Port"
+      * "Open a port I can connect to"
+  * `noun`: A number defining and specifying a virtual communication channel between computers.
+    * aka "port number"
+    * "I opened port 1025"
+# microcontroller
+  * aka "MCU" from "MicroController Unit"
+
+# microprocessor
+  
+# microchip
+
+
+
+
+
+
+
+
+# Mobile World Congress
+  * aka "MWC"
+# Consumer Electronics Show
+  * aka "CES"
+
+# Wafer-level Chip Scale Package
+
+# Non-Solder Mask Defined
+
+# Solder Mask Defined
+
+# PCB Pad
+
+# Printed Circuit Board
+# bread board
+
+# GUID Partition Table
+  * aka "GPT"
+# Master Boot Record
+  * aka "MBR"
+# Apple Partition Map
+  * aka "APM"
+# Apple Silicon
+  * ARM-based processors designed by Apple to ditch Intel x86 processors on Macs
+# Texas Instruments
+
+# ST Microelectronics
+# Mediatek
+
+# Avahi
+  * library for mDNS
+# BIOS
+# UEFI
+# IO
+  * also stylized as "I/O"
+# Universal Asynchronous Receiver Transmitter
+  * aka "UART"
+# [Serial Peripheral Interface](https://en.wikipedia.org/wiki/Serial_Peripheral_Interface)
+# wafer
+
+# Quad SPI
+
+# Queued SPI
+
+# Octo SPI
+
+# Inter-Integrated Circuit
+  * aka "IIC" or "I2C", asa "I<sup>2</sup>C"
+
+# flash storage
+
+# NAND flash
+
+# bus
+
+# serial
+
+# NVIDIA Tegra
+
+# Qualcomm Snapdragon
+# Qualcomm Turnip
+# Qualcomm Adreno
+# Qualcomm Gunyah
+# Qualcomm Dragonwing
+# Samsung Exynos
+
+# Intel Core
+# Intel ARC
+# AMD Ryzen
+
+# Embedded System
+# Advanced Power Management
+
+# SRAM
+
+# DRAM
+# [SDRAM](https://en.wikipedia.org/wiki/Synchronous_dynamic_random-access_memory)
+# DDR SDRAM
+# DDR2 SDRAM
+# DDR3 SDRAM
+# DDR4 SDRAM
+# DDR5 SDRAM
+# LPDDR SDRAM
+# DIMM
+# SODIMM
+# UDIMM
+# CUDIMM
+# RDIMM
+# LRDIMM
+# CAMM
+# SOCAMM
+# EMMC
+# M.2
+# NVME
+# SSD
+# HDD
+
+# DRM
+  
+
+
+opportunity
+library
+february
+
+# hackintosh
+# Asahi
+  * linux distro specifically designed for Mac devices
+# [DarwinKVM](https://docs.darwinkvm.com/)
+#
