--- a/2.md
+++ b/2.md
@@ -1,30 +1,43 @@
-# Term <sup><sup><sub><sub><small><sup>`type` </sup></small></sub></sub></sup></sup> 
+# Term <sup><sub><sup>`type`</sup></sub></sup> 
 
 # FCC
 * acronym for [Federal Communications Commission](#federal-communications-commission-regulations)
 
-# Federal Communications Commission <sup><sub><sup><small>`regulations`</small></sup></sub></sup>
-* US Regulating body for digital communications systems
+# Federal Communications Commission <sup><sub><sup>`regulations`</sup></sub></sup>
+  * aka "FCC"
+  * US Regulating body for digital communications systems
 # Federal Trade Commission
-
+  * aka "FTC"
+  * US Regulating Body for trades and operations between businesses
 # International Organization for Standardization
-
+  * aka "ISO"
 # International Electrotechnical Commission
-
+  * aka "IEC"
 # Internet Engineering Task Force
-
+  * aka "IETF"
 # Institute of Electrical and Electronics Engineers
-
+  * aka "IEEE"
 # Internet Governance Forum
-
+  * aka "IEEE"
 # Regional Internet Registry
-
+  * aka "RIR"
+# Web Hypertext Application Technology Working Group"
+  * aka "WHATWG"
+# What You See Is What You Get
+  * aka "WYSIWYG"
+# Registrar 
+  * 
 # Number Resource Organization
   * 
+# American National Standards Institute
+
+# National Institute for Standards and Technology
+
 
 # Africa Network Information Centre
-  * abbreviated "AFRINIC"
-
+  [!NOTE]
+  abbreviated "AFRINIC"
+  * a Number Resource Organization
 
 # Internet Society 
   * abbreviated "ISOC"
@@ -34,16 +47,16 @@
 # Internet Assigned Numbers Authority
   * acronymized, "IANA"
   * 
-# Windows <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+# Windows <sup><sub><sup>`Operating System`</sup></sub></sup>
   * Desktop Operating System created by Microsoft. Successor to MS-DOS
 
-# macOS <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+# macOS <sup><sub><sup>`Operating System`</sup></sub></sup>
   * Desktop Operating System created by Apple, exclusive to [Mac Devices](#mac)
 
-# Mac <sup><sub><sup><small>`Consumer Device`</small></sup></sub></sup>
+# Mac <sup><sub><sup>`Consumer Device`</sup></sub></sup>
   computer made by Apple
 
-# MS-DOS <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+# MS-DOS <sup><sub><sup>`Operating System`</sup></sub></sup>
   * predecessor to [Windows](#windows-operating-system)
     ## etymology
 
@@ -120,8 +133,9 @@
 
 # Zorin OS<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 # Red Hat <sup><sub><sup><small>`Company`</small></sup></sub></sup>
-
-# Red Hat Enterprise Linux  <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
+  [!NOTE]
+  also refers to [Red Hat Enterprise Linux](#red-hat-enterprise-linux-operating-system)
+# Red Hat Enterprise Linux <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
   <small><small><ul>
   <li> aka "Red Hat Linux", or "Red Hat" </li>
   <li> aka "RHEL", or "RH" from "Red Hat" </li>
@@ -159,10 +173,13 @@
 
 # ArcoLinux Plasma
 
-
 # Purism <sup><sub><sup>`Operating System`</small></sup></sub></sup>
 
 # Sun Microsystems
+
+# Pine64
+
+# Framework
 
 # Oracle
 
@@ -367,13 +384,27 @@ A#
 # PowerPC <sup><sub><sup>`Instruction Set Architecture`</sup></sub></sup>
 
 # AMD64
+  * technical name for "64 bit x86"
+# x86_64
+  * technical name for "64 bit x86". perfectly synonymous to "AMD64"
+
+# 64-bit x86
+  * aka "amd64" or "x86_64" on Linux based systems
+  * the 64-bit extension to the x86 arcitecture
+# 32-bit x86
+  * aka "i386" on Linux based systems, occasionally called "IA-86"
+  * the 32-bit extension to the x86 architecture.
 # x86
-  * an architecture originating from the Intel 8086 microprocessor.
-  * if given an option between x86 and x64 in Windows, x86 is synonymous to "32 bit x86"
+  * `general` an architecture originating from the 16-bit x86 architecture.
+  * a 16 bit architecture that ran on the Intel 8086 microprocessor. Succeded by general x86
+  * if given an option between x86 and x64 in the context of Windows, synonymous to "32 bit x86"
+# IA-86
+  * perfectly synonymous to "i386", or "32 bit x86"
 # i386
-  * synonymous to IA-86, or 32 bit x86
-# SPARC
-  abbreviation for
+  * perfectly synonymous to "IA-86", or "32 bit x86"
+# Scalable Processor Architecture
+  * aka "SPARC"
+# 
 
 opportunity
 library
@@ -438,8 +469,21 @@ february
 # Wine
 # Darling
   * etymology
-    * Darwin (underlying MacOS)
+    * **Dar**win (underlying MacOS system)
+    * **Lin**ux
+    * extraneous g to create Darling instead of Darlin
     
+# Winlator
+
+# Exagear
+
+# Termux
+
+# UserLAnd
+
+# userland
+  * user-privileged accessible memory space
+
 # port <sup><sub><sup>`compatibility`</sup></sub></sup>
   * `verb`: to refactor code to work on another platform, architecture, or environment.
     * <i><big><big>&ldquo;</big></big> I plan to port my application to Android soon <big><big><big><big><sub><sub>&rdquo;</sub></sub></big></big></big></big></i>
