--- a/2.md
+++ b/2.md
@@ -133,8 +133,8 @@
 
 # Zorin OS<sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
 # Red Hat <sup><sub><sup><small>`Company`</small></sup></sub></sup>
-  [!NOTE]
-  also refers to [Red Hat Enterprise Linux](#red-hat-enterprise-linux-operating-system)
+  > [!NOTE]
+  > also refers to [Red Hat Enterprise Linux](#red-hat-enterprise-linux-operating-system)
 # Red Hat Enterprise Linux <sup><sub><sup><small>`Operating System`</small></sup></sub></sup>
   <small><small><ul>
   <li> aka "Red Hat Linux", or "Red Hat" </li>
@@ -399,9 +399,11 @@ A#
   * a 16 bit architecture that ran on the Intel 8086 microprocessor. Succeded by general x86
   * if given an option between x86 and x64 in the context of Windows, synonymous to "32 bit x86"
 # IA-86
-  * perfectly synonymous to "i386", or "32 bit x86"
+  > [!NOTE]
+  > Interchangable: [i386](#ia-86), Universal [32-bit x86](#32-bit-x86)
 # i386
-  * perfectly synonymous to "IA-86", or "32 bit x86"
+  > [!NOTE]
+  > Interchangable: [IA-86](#ia-86), Universal [32-bit x86](#32-bit-x86)
 # Scalable Processor Architecture
   * aka "SPARC"
 # 
