--- a/2.md
+++ b/2.md
@@ -175,18 +175,32 @@
 
 # Purism <sup><sub><sup>`Operating System`</small></sup></sub></sup>
 
-# Sun Microsystems
+# LinuxFX
+  
+# WindowsFX
 
-# Pine64
+# Wubuntu
 
-# Framework
+# Twitter
+  * The single best platform for togetherness and community over the world wide web.
 
-# Oracle
+# X
+  * disgraced Twitter
 
-# Microsoft
+# Sun Microsystems `company`
+  * Company that created the [SPARC](#scalable-processor-architecture-computer-architecture) architecture, The Java programming language, the VirtualBox suite of software, and Solaris, before being bought for 7.4b USD by [Oracle](#oracle-company)
+# Pine64 `company`
 
-# Sony
+# Framework `company`
 
+# Oracle `company`
+  * owner and maintaining company of Java, VirtualBox, and Solaris; All of which were owned by Sun Microsystems before it was bought out.
+# Microsoft `company`
+  * aka "MS". Occasionally, or almost always when referring to it's stock, "MSFT"
+# Bill Gates `person`
+  * co-founder, and former CEO of [Microsoft](#microsoft-company)
+# Sony `company`
+  
 # Linux Foundation
 
 # Free Software Foundation
@@ -204,6 +218,26 @@
 # Phillips
 
 # LG
+
+# Panasonic
+
+# Baidu
+
+# Tencent
+
+# TCL
+
+# Vizio
+
+# Sharp
+
+# Hitachi
+
+# Dell
+
+# Hewlett Packard
+
+# Toshiba
 
 # Sega
 
@@ -232,6 +266,8 @@
 
 # Google
 
+# Alphabet
+
 # Samsung
 
 # Apple
@@ -240,10 +276,24 @@
 
 # Lenovo
 
+# Taiwan Semiconductor Manufacturing Company
+  * aka "TSMC"
+
+# Amazon 
+  
+# Jeff Bezos
+  * founder and executive chairman of [Amazon](#amazon-company)
+# Meta
+
+# Mark Zuckerberg
+  * co-founder of the [Facebook](#facebook-company) company
+  , later rebranded and currently known as [Meta](#meta-company)
 # ASUS
 # ASUS ROG
 # ASUS ROG Ally
+# Valve
 # Valve Steam Deck
+# MSI
 # MSI Claw
 # Lenovo Legion
 # Lenovo Legion Go
@@ -252,6 +302,7 @@
 # Odin
 # Miyoo
 # Anbernic
+# Ayaneo
 
 # Orange PI
 # Banana Pi
@@ -383,18 +434,23 @@ A#
   * aka "DARE"
 # PowerPC <sup><sub><sup>`Instruction Set Architecture`</sup></sub></sup>
 
-# AMD64
+# AMD64 `computer architecture`
   * technical name for "64 bit x86"
-# x86_64
+# x86_64 `computer architecture`
   * technical name for "64 bit x86". perfectly synonymous to "AMD64"
-
+# x64 `computer architecture family`
+  * refers to 64 bit architectures
+  * sometimes shortened by Windows and windows users, referring to [64-bit x86]()
+# x32 `computer architecture family`
+  * refers to 32 bit architectures
+  * sometimes shortened by less technical people, referring to [32-bit x86](#32-bit-x86)
 # 64-bit x86
   * aka "amd64" or "x86_64" on Linux based systems
   * the 64-bit extension to the x86 arcitecture
 # 32-bit x86
   * aka "i386" on Linux based systems, occasionally called "IA-86"
   * the 32-bit extension to the x86 architecture.
-# x86
+# x86 `computer architecture family`
   * `general` an architecture originating from the 16-bit x86 architecture.
   * a 16 bit architecture that ran on the Intel 8086 microprocessor. Succeded by general x86
   * if given an option between x86 and x64 in the context of Windows, synonymous to "32 bit x86"
@@ -404,7 +460,7 @@ A#
 # i386
   > [!NOTE]
   > Interchangable: [IA-86](#ia-86), Universal [32-bit x86](#32-bit-x86)
-# Scalable Processor Architecture
+# Scalable Processor Architecture `computer architecture`
   * aka "SPARC"
 # 
 
@@ -433,41 +489,64 @@ february
   * Company known for creating widespread game consoles, marketed mainly at kids and families.
   * Company known for obliterating and suing <small><small><small>TF OUT OF</small></small></small> developers of software that emulates it's consoles
 
-# Yuzu
-# Suyu
-# Ryujinx
-# Citron
-# Pine
-# NxEmu
-# Nyushu
-# Sudachi
-# Skyline
-# Pine
-# Live4k
-# Uzuy
-# EggNS
-# NxEmu
+# Yuzu `emulator`
+# Suyu `emulator`
+# Ryujinx `emulator`
+# Citron `emulator`
+  * most currently notable Nintendo Switch emulator
+# Pine `emulator`
+# Nyushu `emulator`
+# Sudachi `emulator`
+# Skyline `emulator` 
+# EggNS `emulator`
+# NxEmu `emulator`
   * an emulator that aims to be legally invincible from Nintendo's lawyers.
 
-# MelonDS
-# Citra
-# Lime3DS
-# Panda3DS
-# Azahar
+# MelonDS `emulator`
+# Citra `emulator`
+# Lime3DS `emulator`
+# Panda3DS `emulator`
+# Azahar `emulator`
+  
+# Dolphin `emulator`
 
-# Dolphin
+# Cemu `emulator`
 
-# Cemu
+# RPCS3 `emulator`
 
-# RPCS3
+# PCSX2 `emulator`
 
-# PCSX2
+# XWine1 `compatability layer`
+# WinDurango ``
 
-# XWine1
-# WinDurango
+# ShadPS4 `emulator`
 
-# ShadPS4
+# AetherSX2
 
+# NetherSX2
+
+# Nintendo DS `game console`
+
+# Nintendo DSi `game console`
+  * 
+# Nintendo DSi XL `game console`
+  * larger [Nintendo DSi](#nintendo-dsi) System
+# Nintendo 3DS `game console`
+  
+# Nintendo 3DS XL `game console`
+
+# New Nintendo 3DS `game console`
+
+# New Nintendo 3DS XL `game console`
+
+# Nintendo 2DS `game console`
+  * console meant to play Nintendo 3DS games without 3D capabilities, and being cheaper
+# Nintendo 2DS XL `game console`
+  * larger [Nintendo 2DS](#nintendo-2ds-game-console)
+# New Nintendo 2DS `game console`
+  * console meant to play New Nintendo 3DS games without 3D capabilities
+# New Nintendo 2DS XL `game console`
+  * larger [New Nintendo 2DS](#new-nintendo-2ds-game-console)
 # Wine
 # Darling
   * etymology
@@ -479,7 +558,7 @@ february
 
 # Exagear
 
-# Termux
+# Termux 
 
 # UserLAnd
 
@@ -537,10 +616,18 @@ february
   * aka "APM"
 # Apple Silicon
   * ARM-based processors designed by Apple to ditch Intel x86 processors on Macs
+  * see also [M-series chips](#)
 # Texas Instruments
 
 # ST Microelectronics
 # Mediatek
+
+# Mediatek Dimensity
+  
+# Realtek
+  
+# MSPM0C1104
+  * the most edible mcu by TI
 
 # Avahi
   * library for mDNS
@@ -571,11 +658,14 @@ february
 # serial
 
 # NVIDIA Tegra
-
-# Qualcomm Snapdragon
-# Qualcomm Turnip
+# Qualcomm `company`
+# Qualcomm Snapdragon `processor`
+# Turnip
+  * open source driver for Qualcomm Adreno GPUs
 # Qualcomm Adreno
+  * GPU for the Snapdragon SoC
 # Qualcomm Gunyah
+  * Hypervisor for the Snapdragon SoC
 # Qualcomm Dragonwing
 # Samsung Exynos
 
